# Nixie

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
docs/: README.CHS.md
example/: example.nixie
src/: main.cpp
